fixed email box alignment, fixed spanning of wavy divider,

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,7 @@ body {
   /* border-radius: 0.75rem; */
   /* border: none; */
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .btn-primary:hover
